# AERC

./: .gitignore  aerc-manager.sh  build-env.ps1  build-env.sh  docker-compose.yml  index.vue
api/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
api/migrations/models/: 10_20250421030151_add_villages_model_with_town_relation.py  11_20250421030222_add_sections_model_with_town_relation.py  12_20250422022559_adjust_villages_field_lengths.py  13_20250423045912_add_classification_to_offices.py  13_20250423050450_add_classification_to_offices.py  14_20250424011921_add_domicile_to_offices.py  15_20250424021839_add_grant_management_system.py  16_20250424061800_convert_office_to_string.py  17_20250424062549_fix_office_id_field_name.py  18_20250510141131_add_pipe_fitting_materials.py  19_20250510141420_add_pipe_fitting_diameters.py  1_20250418021704_add_email_to_users.py  20_20250510142000_add_pipe_fitting_modules.py  21_20250510143306_add_pipe_fitting_groups.py  22_20250510151125_add_pipe_fitting_models.py  23_20250510152712_update_pipe_fittings_nullable_fields.py  24_20250511035130_add_irrigation_types_model.py  25_20250511042240_add_fields_to_pipe_fittings.py  26_20250511075703_add_pf_annual_prices.py  27_20250511161048_add_of_facility_types.py  28_20250511161114_add_of_subsidy_settings.py  29_20250511161443_update_facility_and_subsidy.py  2_20250420073818_add_role_and_permissions_to_users.py  30_20250511161630_update_subsidy_settings_column.py  31_20250512051800_add_subsidy_policies.py  32_20250512051846_add_irrigation_subsidies.py  (+8 more)
api/src/: main.py
(+123 files in other folders)
