[tool.aerich]
tortoise_orm = "src.database.config.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[tool.pytest.ini_options]
testpaths = [
    "src/tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[project]
name = "dry-farm-api"
version = "0.1.0"
description = "FastAPI backend for Dry Farm"
